# minimal-GRPO-pytorch

./: .gitignore  README.md  pyproject.toml  repo_structure.md
data/: medqa_loader.py
grpo/: __init__.py  loss.py  policy.py  reward_manager.py  trainer.py
scripts/: train.py
tests/: test_advantage.py  test_loss.py
